--- a/demo/package.json
+++ b/demo/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.2",
+    "wix-rich-content-common": "^7.6.1",
     "wix-rich-content-plugin-divider": "^7.6.1",
     "wix-rich-content-plugin-image": "^7.6.1",
     "wix-rich-content-plugin-line-spacing": "^7.6.1",
+    "wix-rich-content-plugin-link": "^7.6.1",
     "wix-rich-content-plugin-text-color": "^7.6.1",
     "wix-rich-content-viewer": "^7.6.1",
     "wix-rich-content-wrapper": "^7.6.1"
