demo dependency refactor

--- a/demo/package.json
+++ b/demo/package.json
@@ -3,26 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
+    "@babel/runtime": "7.2.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/draft-js": "^0.10.40",
-    "draft-js": "^0.11.5",
     "material-ui-dropzone": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "ricos-viewer": "^7.10.7",
     "typescript": "^3.9.2",
-    "wix-rich-content-plugin-divider": "^7.6.1",
-    "wix-rich-content-plugin-image": "^7.6.1",
-    "wix-rich-content-plugin-line-spacing": "^7.6.1",
-    "wix-rich-content-plugin-link": "^7.6.1",
-    "wix-rich-content-plugin-text-color": "^7.6.1",
-    "wix-rich-content-viewer": "^7.6.1",
-    "wix-rich-content-wrapper": "^7.6.1"
+    "wix-rich-content-plugin-divider": "^7.10.7",
+    "wix-rich-content-plugin-image": "^7.10.7",
+    "wix-rich-content-plugin-line-spacing": "^7.10.7",
+    "wix-rich-content-plugin-link": "^7.10.7",
+    "wix-rich-content-plugin-text-color": "^7.10.7"
   },
   "scripts": {
     "start": "react-scripts start",
