--- a/demo/package.json
+++ b/demo/package.json
@@ -28,8 +28,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "clean": "rm -rf node_modules && rm -f package-lock.json",
-    "reinstall": "npm run clean && npm i"
+    "clean": "rm -rf node_modules && rm -f package-lock.json && rm -rf build",
+    "reinstall": "npm run clean && npm i",
+    "rebuild": "npm run reinstall && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
