file uploads are now visible

--- a/demo/package.json
+++ b/demo/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/draft-js": "^0.10.40",
+    "immutability-helper": "^3.1.1",
     "material-ui-dropzone": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -17,6 +18,7 @@
     "ricos-viewer": "^7.16.3",
     "typescript": "^3.9.2",
     "wix-rich-content-plugin-divider": "^7.16.3",
+    "wix-rich-content-plugin-file-upload": "^7.16.3",
     "wix-rich-content-plugin-image": "^7.16.3",
     "wix-rich-content-plugin-line-spacing": "^7.16.3",
     "wix-rich-content-plugin-link": "^7.16.3",
