--- a/demo/package.json
+++ b/demo/package.json
@@ -12,6 +12,7 @@
     "@types/draft-js": "^0.10.40",
     "immutability-helper": "^3.1.1",
     "material-ui-dropzone": "^3.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
