--- a/demo/package.json
+++ b/demo/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "ricos-viewer": "^7.16.10",
+    "serialize-javascript": "^4.0.0",
     "typescript": "^3.9.2",
     "wix-rich-content-plugin-divider": "^7.16.10",
     "wix-rich-content-plugin-file-upload": "^7.16.10",
